--- a/assets/css/_front.scss
+++ b/assets/css/_front.scss
@@ -3,27 +3,29 @@
 	background-image: url("./img/front/bg.jpg");
 	background-position: center 0;
 	background-size: 1920px 870px;
-	background-repeat: no-repeat;
-	&-container {
-		width: 1200px;
-		margin: 0 auto;
-		position: relative;
-		@include media {
-			width: 100%;
-		}
+	@include media {
+		background-size: vw(768) vw(1408);
+		background-image: url("./img/front/m-bg.jpg");
 	}
 	&-head {
 		width: 100%;
 		height: 849px;
-		background-size: cover;
+		background-size: 1921px 849px;
 		background-image: url("./img/front/header.jpg");
 		background-position: center 0;
+		background-repeat: no-repeat;
+		position: relative;
+		@include media {
+			height: vw(1341);
+			background-image: url("./img/front/m-header.jpg");
+			background-size: vw(768) vw(1341);
+		}
 		&Slogan {
-			width: 1522px;
-			height: 800px;
-			background-size: cover;
-			background-image: url("./img/front/ptn.png");
-			position: absolute;
+			// width: 1522px;
+			// height: 800px;
+			// background-size: cover;
+			// background-image: url("./img/front/ptn.png");
+			// position: absolute;
 			top: 0;
 			left: 0;
 		}
@@ -38,9 +40,374 @@
 			left: 0;
 		}
 	}
+	&-scrollDown {
+		display: none;
+		@include media {
+			display: block;
+			width: 100%;
+			height: vw(160);
+			position: relative;
+			background-color: #45423e;
+			font-size: 0;
+			&:before {
+				content: "";
+				width: vw(243);
+				height: vw(98);
+				background-size: 100%;
+				background-image: url("./img/front/scrolldown.png");
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
+		}
+	}
+	&-loginBtn {
+		width: 247px;
+		height: 115px;
+		position: absolute;
+		top: 874px;
+		left: 50%;
+		transform: translateX(-50%);
+		background-image: url("./img/front/btn-login.png");
+		background-size: 100%;
+		display: block;
+		font-size: 0;
+		z-index: 2;
+		@include media {
+			width: vw(306);
+			height: vw(142);
+			top: vw(581);
+		}
+	}
 	&-content {
+		width: 1200px;
+		margin: 0 auto;
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		padding-top: 238px;
+		// padding-bottom: 120px;
+		@include media {
+			width: 100%;
+			padding-top: vw(77);
+			align-items: center;
+		}
+		&Box {
+			position: relative;
+			margin-bottom: 56px;
+			&[data-box="1"] {
+				width: 1131px;
+				height: 380px;
+				background-size: 100%;
+				background-image: url("./img/front/box1.png");
+				@include media {
+					width: vw(690);
+					height: vw(288);
+					background-image: url("./img/front/m-box1.png");
+				}
+				.front-contentBox-group {
+					position: absolute;
+					top: 43px;
+					left: 597px;
+					@include media {
+						top: vw(55);
+						left: vw(366);
+					}
+				}
+				&.front-contentBox-btn {
+				}
+			}
+			&[data-box="2"] {
+				width: 1126px;
+				height: 380px;
+				background-size: 100%;
+				background-image: url("./img/front/box2.png");
+				margin-left: auto;
+				@include media {
+					width: vw(688);
+					height: vw(289);
+					background-image: url("./img/front/m-box2.png");
+					margin-left: 0;
+				}
+				.front-contentBox-group {
+					position: absolute;
+					top: 68px;
+					left: 137px;
+					@include media {
+						top: vw(55);
+						left: vw(72);
+					}
+				}
+				&.front-contentBox-btn {
+				}
+			}
+			&[data-box="3"] {
+				width: 1114px;
+				height: 380px;
+				background-size: 100%;
+				background-image: url("./img/front/box3.png");
+				@include media {
+					width: vw(691);
+					height: vw(287);
+					background-image: url("./img/front/m-box3.png");
+				}
+				.front-contentBox-group {
+					position: absolute;
+					top: 71px;
+					left: 557px;
+					@include media {
+						top: vw(55);
+						left: vw(360);
+					}
+				}
+				&.front-contentBox-btn {
+				}
+			}
+			&[data-box="4"] {
+				width: 1126px;
+				height: 380px;
+				background-size: 100%;
+				background-image: url("./img/front/box4.png");
+				margin-left: auto;
+				@include media {
+					width: vw(687);
+					height: vw(278);
+					background-image: url("./img/front/m-box4.png");
+					margin-left: 0;
+				}
+				.front-contentBox-group {
+					position: absolute;
+					top: 35px;
+					left: 128px;
+					@include media {
+						top: vw(55);
+						left: vw(62);
+					}
+				}
+				&.front-contentBox-btn {
+				}
+			}
+			&[data-box="bn"] {
+				margin-top: 134px;
+				margin-bottom: 346px;
+				@include media {
+					width: 100%;
+					margin-top: 0;
+					margin-bottom: vw(68);
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+				}
+			}
+			&-group {
+				text-align: center;
+				@include media {
+				}
+			}
+			&-title {
+				font-size: 42px;
+				color: #fbc700;
+				font-weight: bold;
+				margin-bottom: 32px;
+				@include media {
+					font-size: vw(26);
+					margin-bottom: vw(28);
+				}
+			}
+			&-text {
+				font-size: 22px;
+				color: #e6e2dc;
+				margin-bottom: 32px;
+				line-height: 1.5;
+				span {
+					display: block;
+				}
+				@include media {
+					font-size: vw(14);
+					margin-bottom: vw(20);
+				}
+			}
+			&-bn {
+				max-width: calc(var(--w) * 1px);
+				width: 100%;
+				background-image: linear-gradient(to bottom, #d3cfc1 40px, #7e7770 41px, #7e7770 42px, #e7e4dd 43px, #e7e4dd 100%);
+				border-radius: 20px;
+				border: 2px solid #7e7770;
+				box-sizing: border-box;
+				padding: 94px 20px 20px 20px;
+				box-shadow: 0 0 0 4px #ffc23b, 6px 12px 0 8px #4b453e;
+				min-height: 280px;
+				position: relative;
+				@include media {
+					max-width: calc(var(--mw) / 768 * 100vw);
+					background-image: linear-gradient(to bottom, #d3cfc1 vw(40), #7e7770 vw(41), #7e7770 vw(42), #e7e4dd vw(43), #e7e4dd 100%);
+					box-shadow: 0 0 0 vw(4) #ffc23b, vw(6) vw(6) 0 vw(6) #4b453e;
+					margin-bottom: vw(38);
+					height: vw(280);
+					padding: vw(94) vw(20) vw(20) vw(20);
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
+				&:before {
+					content: "";
+					width: 84px;
+					height: 20px;
+					background-size: 100%;
+					background-image: url("./img/lottery/desc.png");
+					position: absolute;
+					top: 10px;
+					right: 24px;
+					@include media {
+						width: vw(84);
+						height: vw(20);
+						top: vw(10);
+						right: vw(24);
+					}
+				}
+				&:first-child {
+					margin-left: 24px;
+					@include media {
+						margin-left: 0;
+					}
+				}
+				&:last-child {
+					position: absolute;
+					top: 170px;
+					right: 68px;
+					@include media {
+						position: relative;
+						top: 0;
+						right: 0;
+					}
+				}
+			}
+		}
 	}
 	&-bottom {
 		background-color: #4b453e;
+		&Container {
+			max-width: 1200px;
+			width: 100%;
+			margin: 0 auto;
+			position: relative;
+			padding-top: 54px;
+			padding-bottom: 50px;
+			text-align: center;
+			@include media {
+				padding-top: vw(35);
+				padding-bottom: vw(35);
+			}
+		}
+		&Title {
+			font-size: 42px;
+			color: #fbc700;
+			font-weight: bold;
+			margin-bottom: 52px;
+			@include media {
+				font-size: vw(26);
+				margin-bottom: vw(30);
+			}
+		}
+		&Game {
+			&-top {
+				display: flex;
+				justify-content: center;
+				margin-bottom: 34px;
+				@include media {
+					margin-bottom: vw(18);
+				}
+			}
+			&-bottom {
+				display: flex;
+				justify-content: center;
+			}
+			&-btn {
+				width: 118px;
+				height: 118px;
+				position: relative;
+				border-radius: 50%;
+				margin-right: 40px;
+				@include media {
+					width: vw(62);
+					height: vw(62);
+					margin-right: vw(22);
+				}
+				&:last-child {
+					margin-right: 0;
+				}
+				&:before {
+					content: "";
+					width: 140px;
+					height: 140px;
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					background-size: 100%;
+					user-select: none;
+					@include media {
+						width: vw(72);
+						height: vw(72);
+					}
+				}
+				&[data-game="LM"] {
+					&:before {
+						background-image: url("./img/common/LM.png");
+					}
+				}
+				&[data-game="LR"] {
+					&:before {
+						background-image: url("./img/common/LR.png");
+					}
+				}
+				&[data-game="LMonth"] {
+					&:before {
+						background-image: url("./img/common/LMonth.png");
+					}
+				}
+				&[data-game="LFree"] {
+					&:before {
+						background-image: url("./img/common/LFree.png");
+					}
+				}
+				&[data-game="Maple"] {
+					&:before {
+						background-image: url("./img/common/Maple.png");
+					}
+				}
+				&[data-game="Mabi"] {
+					&:before {
+						background-image: url("./img/common/Mabi.png");
+					}
+				}
+				&[data-game="CS"] {
+					&:before {
+						background-image: url("./img/common/CS.png");
+					}
+				}
+				&[data-game="DN"] {
+					&:before {
+						background-image: url("./img/common/DN.png");
+					}
+				}
+				&[data-game="ELS"] {
+					&:before {
+						background-image: url("./img/common/ELS.png");
+					}
+				}
+				&[data-game="SB"] {
+					&:before {
+						background-image: url("./img/common/SB.png");
+					}
+				}
+				&[data-game="WOD"] {
+					&:before {
+						background-image: url("./img/common/WOD.png");
+					}
+				}
+			}
+		}
 	}
 }
