--- a/assets/css/_top.scss
+++ b/assets/css/_top.scss
@@ -6,6 +6,7 @@
 	right: 0;
 	background-size: cover;
 	background-image: url("./img/common/btn-top.png");
+	z-index: 10;
 	@include media {
 		width: vw(134);
 		height: vw(134);
