--- a/assets/css/_gamedata.scss
+++ b/assets/css/_gamedata.scss
@@ -39,19 +39,22 @@
 			background-size: vw(1920) vw(576);
 		}
 		&Box {
-			width: 300px;
-			height: 300px;
+			width: 1920px;
+			height: 100%;
 			position: absolute;
 			top: 0;
-			left: 0;
-			background-color: #000;
+			left: 50%;
+			transform: translateX(-50%);
+			@include media {
+				width: vw(768);
+			}
 		}
 		&Anim1 {
 			width: 153px;
 			height: 139px;
 			position: absolute;
 			top: 371px;
-			left: 535px;
+			left: 891px;
 			z-index: 3;
 			clip-path: polygon(100% 0%, 100% 55.98%, 86% 64.47%, 0% 63.18%, 0% 0%);
 			span {
@@ -81,7 +84,7 @@
 			height: 137px;
 			position: absolute;
 			top: 345px;
-			left: 590px;
+			left: 947px;
 			z-index: 2;
 			clip-path: polygon(100% 0%, 100% 66.74%, 66.62% 82%, 0% 82%, 0% 0%);
 			span {
@@ -111,7 +114,7 @@
 			height: 132px;
 			position: absolute;
 			top: 348px;
-			left: 585px;
+			left: 940px;
 			z-index: 1;
 			clip-path: polygon(100% 0%, 100% 58.41%, 57.26% 83%, 0% 83%, 0% 0%);
 			span {
@@ -294,13 +297,19 @@
 			}
 		}
 		&1 {
-			width: 200px;
+			width: 201px;
 			height: 66px;
-			background-size: 200%;
+			background-size: 400%;
 			margin-right: 64px;
 			background-image: url("./img/gamedata/btn-1.png");
 			@include hover {
-				background-position-x: 100%;
+				background-position-x: -100%;
+			}
+			&.on {
+				background-position-x: -200%;
+				@include hover {
+					background-position-x: -300%;
+				}
 			}
 			@include media {
 				width: vw(200);
@@ -309,12 +318,18 @@
 			}
 		}
 		&2 {
-			width: 200px;
+			width: 201px;
 			height: 66px;
-			background-size: 200%;
+			background-size: 400%;
 			background-image: url("./img/gamedata/btn-2.png");
 			@include hover {
-				background-position-x: 100%;
+				background-position-x: -100%;
+			}
+			&.on {
+				background-position-x: -200%;
+				@include hover {
+					background-position-x: -300%;
+				}
 			}
 			@include media {
 				width: vw(200);
@@ -324,8 +339,10 @@
 	}
 	&-swiperGroup {
 		margin-bottom: 91px;
+		min-height: 1578px;
 		@include media {
 			margin-bottom: vw(91);
+			min-height: vw(2589);
 		}
 		.swiper {
 			width: 1200px;
