--- a/assets/css/_gamedata.scss
+++ b/assets/css/_gamedata.scss
@@ -297,8 +297,8 @@
 			}
 		}
 		&1 {
-			width: 201px;
-			height: 66px;
+			width: 200px;
+			height: 65px;
 			background-size: 400%;
 			margin-right: 64px;
 			background-image: url("./img/gamedata/btn-1.png");
@@ -313,13 +313,13 @@
 			}
 			@include media {
 				width: vw(200);
-				height: vw(66);
+				height: vw(65);
 				margin-right: vw(64);
 			}
 		}
 		&2 {
-			width: 201px;
-			height: 66px;
+			width: 200px;
+			height: 65px;
 			background-size: 400%;
 			background-image: url("./img/gamedata/btn-2.png");
 			@include hover {
@@ -333,13 +333,38 @@
 			}
 			@include media {
 				width: vw(200);
-				height: vw(66);
+				height: vw(65);
 			}
 		}
 	}
 	&-swiperGroup {
+		width: 100%;
 		margin-bottom: 91px;
 		min-height: 1578px;
+		position: relative;
+		&.off {
+			&:before {
+				content: "";
+				max-width: 1091px;
+				width: 100%;
+				height: 100%;
+				background-image: linear-gradient(to bottom, #d3cfc1 43px, #7e7770 44px, #7e7770 45px, #e7e4dd 46px, #e7e4dd 100%);
+				border-radius: 20px;
+				box-shadow: 0 0 0 4px #ffc23b, 20px 20px 0 0px #4b453e;
+				border: 1px solid #7e7770;
+				position: absolute;
+				top: 3px;
+				left: 48px;
+				@include media {
+					max-width: vw(642);
+					top: vw(3);
+					left: vw(56);
+					border-radius: vw(20);
+					background-image: linear-gradient(to bottom, #d3cfc1 vw(43), #7e7770 vw(44), #7e7770 vw(45), #e7e4dd vw(46), #e7e4dd 100%);
+					box-shadow: 0 0 0 vw(4) #ffc23b, vw(20) vw(20) 0 0 #4b453e;
+				}
+			}
+		}
 		@include media {
 			margin-bottom: vw(91);
 			min-height: vw(2589);
