--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -9,6 +9,7 @@
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	overflow: hidden;
 	@include media {
 		height: vw(1304);
 		background-size: vw(768) vw(1304);
