--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -11,8 +11,9 @@
 @import "./_top.scss";
 @import "./_loading.scss";
 @import "./inner.css";
-$color: #000;
+$color: #2d2d2d;
 $title: #fff;
+$orange: #ff9d00;
 
 /*=============================================
 Value
@@ -21,9 +22,20 @@ Value
 Base  
 =============================================*/
 body {
+	font-size: 0;
 	padding: 0;
 	width: 100%;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	background: #000;
 	font-family: "PingFangTC-Regular", "Heiti TC", "Noto Sans TC", "Microsoft JhengHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+@media (max-width: 768px) {
+	.section {
+		min-width: 0;
+		width: 100%;
+		height: auto;
+		padding-bottom: vw(60);
+		background-size: cover;
+		background-position: center top;
+	}
 }
